feat: 优化服务器检测与配置
Co-authored-by: traeagent <traeagent@users.noreply.github.com>